--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ resetbut.onclick = function()
 var submitbut = document.getElementById("submit");
 submitbut.onclick = function()
 {
-	var surl = 'https://script.google.com/macros/s/AKfycbxFwjGT4QOw16XKKFnGk7iCyGO42xUTUmBwqtR8LKaJrR7RGZu8/exec'
+	var surl = 'http://script.google.com/macros/s/AKfycbxFwjGT4QOw16XKKFnGk7iCyGO42xUTUmBwqtR8LKaJrR7RGZu8/exec'
 	$.ajax( {
 	    url : surl,
 		type: "GET",
