--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </body>
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 <script>
 
@@ -191,7 +191,7 @@ resetbut.onclick = function()
 var submitbut = document.getElementById("submit");
 submitbut.onclick = function()
 {
-	var surl = 'http://script.google.com/macros/s/AKfycbxFwjGT4QOw16XKKFnGk7iCyGO42xUTUmBwqtR8LKaJrR7RGZu8/exec'
+	var surl = 'https://script.google.com/macros/s/AKfycbxFwjGT4QOw16XKKFnGk7iCyGO42xUTUmBwqtR8LKaJrR7RGZu8/exec'
 	$.ajax( {
 	    url : surl,
 		type: "GET",
